<resources>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name_eng">Shri Jagdish Mandir</string>
    <string name="app_name">|| श्री जगदीश मंदिर ||</string>
    <string name="action_settings">Settings</string>
    <string name="pager1_text">आमंत्रणपत्रम्</string>
    <string name="pager3_text">संपर्क</string>
    <string name="pager2_text">अन्नक्षेत्र कार्यक्रम</string>
    <string name="pager1tv1_text">सिंहस्थ कुम्भ महापर्व 2016</string>
    <string name="pager1tv2_text">दि. 22 अप्रैल से 21 मई 2016 तक</string>
    <string name="pager1tv3_text">आमंत्रणपत्रं</string>
    <string name="pager1tv4_text">सिंहस्थ में अन्नक्षेत्र एवं आवास स्थल (दत्त अखाडा जोन)</string>
    <string name="pager1tv5_text">प्लाट नं. डी. ए./ 1- 35,38,39 बड़े पुल के पास, रंजीत हनमान रोड पर सोमेश्वर कुण्ड के सामने, उज्जैन (म. प्र.)</string>
    <string name="pager1tv6_text">अखिल भारतीय चन्द्रवंशीय क्षत्रिय खाती समाज</string>
    <string name="pager1tv7_text">( मूर्ति श्री जगदीश मंदिर पंच खतियान न्यास )</string>
    <string name="pager1tv8_text">45, महादजी मार्ग, कार्तिक चौक, उज्जैन (म. प्र.)-456006</string>
    <string name="pager1tv9_text">एकादश कुंडीय श्री जगदीश महायज्ञ प्रतिदिन प्रातः 6 से 7:30 बजे तक</string>
    <string name="pager1tv10_text">मालवा के लाडले संत</string>
    <string name="pager1tv11_text">पं. श्री अनिल शर्मा जी</string>
    <string name="pager1tv12_text">के मुखारविंद से </string>
    <string name="pager1tv13_text">श्रीमद भागवत संपूर्ण कथा</string>
    <string name="pager1tv14_text">दि. 20 अप्रैल से 10 मई 2016 तक</string>
    <string name="pager1tv15_text">नानी बाई को मायरो </string>
    <string name="pager1tv16_text">दि. 18 मई से 21 मई 2016 तक</string>
    <string name="pager1tv17_text"> पं. अग्निहोत्री बंधु, सेवदा</string>
    <string name="pager1tv18_text">के मुखारविंद से</string>
    <string name="pager1tv19_text">श्रीमद भागवत कथा</string>
    <string name="pager1tv20_text">दि. 11 अप्रैल से 17  मई 2016 तक</string>
    <string name="pager1tv21_text">सेकड़ो वाजपेय यज्ञ , हजारो अश्वमेघ यज्ञ करने पर जो फल मिलता हे , वही फल कुम्भ में अन्नदान करने से मिलता हे</string>
    <string name="pager1tv22_text">शस्त हस्त समाहार, सहस्त्रा हस्त संकिर</string>
    <string name="pager1tv23_text">सेकड़ो हाथो से कमाओ , हजारो हाथो से दान करें !</string>
    <string name="pager1tv24_text">अन्नक्षेत्र स्थल पर प्रतिदिन के कार्यक्रम</string>


    <string name="pager1tv25_text">प्रातः 6 से 7:30 बजे तक ११ कुंडिय यज्ञ चलेगा।</string>
    <string name="pager1tv26_text">प्रातः 7:30 से 8:30 तक सभी श्रद्धालुओ  के लिए निशुल्क योग प्रशिक्षण होगा।</string>
    <string name="pager1tv27_text">प्रातः 10 से 12 बजे तक भोजन होगा।</string>
    <string name="pager1tv28_text">दोपहर 2 से 5 बजे तक भागवत कथा एवं प्रवचन होंगे।</string>
    <string name="pager1tv29_text">सायं 7 से रात्रि 11 बजे तक कीर्तन और अन्य सांस्कृतिक कार्यक्रम होंगे।</string>
    <string name="pager1tv30_text">रात्रि 8 से १० बजे तक भोजन होगा।</string>
    <string name="pager1tv31_text">सेंकडो स्नान माघ मास में, हजारो स्नान कार्तिक मास में करोडो स्नान वैशाख मास में करने पर जो फल मिलता हे वहीं फल कुम्भ में एक बार स्नान करने पर मिलता हे</string>
    <string name="pager1tv32_text">सिंहस्थ महापर्व के प्रमुख स्नान की तिथियाँ</string>
    <string name="pager1tv33_text">प्रथम  स्नान :</string>
    <string name="pager1tv34_text">(शाही स्नान )</string>
    <string name="pager1tv35_text">दि. 22 अप्रैल 2016 , शुक्रवार चेत्र शु. पूर्णिमा</string>
    <string name="pager1tv36_text">द्वितीय स्नान :</string>
    <string name="pager1tv37_text"> दि. 06 मई 2016 , शुक्रवार वैसाख कृ.  अमावश</string>
    <string name="pager1tv38_text">तृतीय   स्नान :</string>
    <string name="pager1tv39_text">(शाही स्नान )</string>
    <string name="pager1tv40_text">दि. 09  मई 2016 , सोमवार  वैसाख शु.  तृतीया</string>
    <string name="pager1tv41_text">चतुर्थ  स्नान :</string>
    <string name="pager1tv42_text"> दि. 11 मई 2016 , बुधवार वैसाख शु. पंचमी</string>
    <string name="pager1tv43_text">पंचम स्नान :</string>
    <string name="pager1tv44_text">(शाही स्नान )</string>
    <string name="pager1tv45_text">दि. 21 मई 2016 , शनिवार  वैसाख शु. (बुद्ध पूर्णिमा)</string>
    <string name="pager1tv46_text">( मूर्ति श्री जगदीश मंदिर पंच खतियान न्यास ), 45, महादजी मार्ग, कार्तिक चौक, उज्जैन (म. प्र.)-456006</string>
    <string name="title_activity_activity_ujjain">Ujjain</string>
    <string name="title_activity_activity_image">ActivityImage</string>
    <string name="title_activity_activity_temple">Temple</string>
    <string name="contact_no">9926048442</string>
    <string name="title_activity_activity_gallery">Gallery</string>
    <string name="m1">प. पू. महंत डॉ. रमेश्वरदासजी</string>
    <string name="m11">अध्यक्ष, रामादल अखाड़ा परिषद,</string>
    <string name="m111">उज्जैन</string>
    <string name="m2">परम पूज्य 108 महंत</string>
    <string name="m22">स्वामी सहदेवमुनिजी महाराज</string>
    <string name="temple1">|| श्री जगदीश मंदिर,  उज्जैन ||</string>
    <string name="temple2">|| श्री जगदीश मंदिर,  ओम्कारेश्वर ||</string>
    <string name="temple3">|| श्री जगदीश मंदिर,  हरिद्वार ||</string>
    <string name="temple4">|| श्री जगदीश मंदिर,  भोपाल ||</string>
    <string name="temple5">|| श्री जगदीश मंदिर,  अवलीघाट ||</string>
    <string name="temple55">आंवलेश्वर महादेव मंदिर, आवंलि घाट, तह. रेहटी, सीहोर(म. प्र.)</string>
    <string name="temple44">चंदवंशीय क्षत्रिय खाती समाज धर्मशाला, भोपाल(म. प्र.)</string>
    <string name="temple11">मुख्यालय : श्री जगदीश मंदिर, उज्जैन(म. प्र.)</string>
    <string name="temple33">चंदवंशीय क्षत्रिय खाती समाज धर्मशाल, हरिद्वार(उत्तराखंड)</string>
    <string name="temple22">चंदवंशीय खाती समाज धर्मशाला, ओम्कारेश्वर(म. प्र.)</string>
    <string name="contact11">अन्नक्षेत्र स्थल सम्पर्क सूत्र:-</string>
    <string name="contact1">श्री सुभाष चौधरी- 9425160609</string>
    <string name="contact12">श्री किशोर चौधरी-9300838111</string>
    <string name="contact13">श्री सत्यनारायण वर्मा- 9926048442</string>
    <string name="contact14">श्री मदनलाल चौधरी-9826013356</string>
    <string name="contact15">श्री रमेश पटेल-9926502980</string>
    <string name="contact16">श्री दिनेश भदेरिया-9907788801</string>
    <string name="contact17">श्री राजेंद्र देथलिया-9926815678</string>
    <string name="contact2">श्री सत्यनारायण वर्मा- 9926048442</string>
    <string name="contact23">मेटिक टेक्नोलॉजी  112, श्रीवर्धन काम्प्लेक्स, ४ आर एन टी मार्ग इंदौर</string>
    <string name="contact22">सम्पर्क सूत्र :</string>
    <string name="contact3">श्री जगदीश मंदिर :</string>
    <string name="contact4">खाती समाज :</string>
    <string name="omkareshwar">राधाकृष्ण धाम, ओम्कारेश्वर</string>
    <string name="title_activity_activity_notification">Notifications</string>
    <string name="title_activity_activity_contact_us">ContactUs</string>
    <string name="title_activity_activity_register">Register</string>
    <string name="title_activity_activity_profile">Profile</string>
    <string name="title_activity_activity_help">Help</string>
    <string name="title_activity_activity_about_us">AboutUs</string>
    <string name="title_activity_activity_faqs">FAQs</string>
    <string name="title_activity_activity_terms">Terms</string>
    <string name="title_activity_activity_settings">Settings</string>
    <string name="facebook_app_id">491975267655082</string>
    <string name="ujjain">उज्जैन</string>
    <string name="omkareshwar1">ओम्कारेश्वर</string>
    <string name="haridwar">हरिद्वार</string>
    <string name="bhopal">भोपाल </string>
    <string name="avlighat">अवलीघाट</string>
    <string name="gallery">गैलरी</string>
    <string name="reg_name">नाम</string>
    <string name="reg_mobile">मोबाइल नंबर</string>
    <string name="reg_email">इ-मेल</string>
    <string name="reg_pass">पासवर्ड</string>
    <string name="reg_cpass">कन्फर्म पासवर्ड</string>
    <string name="reg_village">गांव</string>
    <string name="reg_tehsil">तहसील</string>
    <string name="reg_district">जिला</string>
    <string name="reg_register">रजिस्टर</string>

    <string-array name="image_ids">
        <item>@drawable/ujjain1</item>
        <item>@drawable/ujjain2</item>
        <item>@drawable/ujjain3</item>
        <item>@drawable/ujjain4</item>
        <item>@drawable/ujjain5</item>
        <item>@drawable/ujjain6</item>
        <item>@drawable/ujjain7</item>
        <item>@drawable/ujjain8</item>
        <item>@drawable/ujjain9</item>
    </string-array>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
