<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/Ujjain"
            android:icon="@drawable/temple1"
            android:title="@string/ujjain" />
        <item
            android:id="@+id/Omkareshwar"
            android:icon="@drawable/temple1"
            android:title="@string/omkareshwar1" />
        <item
            android:id="@+id/Haridwar"
            android:icon="@drawable/temple1"
            android:title="@string/haridwar" />
        <item
            android:id="@+id/Bhopal"
            android:icon="@drawable/temple1"
            android:title="@string/bhopal" />
        <item
            android:id="@+id/Avlighat"
            android:icon="@drawable/temple1"
            android:title="@string/avlighat" />
        <item
            android:id="@+id/Gallery"
            android:icon="@drawable/gallery1"
            android:title="@string/gallery" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/profile"
                android:title="My Profile" />
            <item
                android:id="@+id/register"
                android:icon="@drawable/register"
                android:title="Register" />
            <item
                android:id="@+id/Share"
                android:icon="@drawable/share1"
                android:title="Share" />
            <item
                android:id="@+id/Visit_WebSite"
                android:icon="@drawable/web1"
                android:title="Visit WebSite" />
            <item
                android:id="@+id/Contact_Us"
                android:icon="@drawable/contact"
                android:title="Contact Us" />
        </menu>
    </item>

</menu>
